app/src/main/java/com/example/truckercore/model/errors/AppException.kt
package com.example.truckercore.model.errors

open class AppException(message: String? = null, cause: Throwable? = null)
    : Exception(message, cause)